Mon Apr 16 23:00:16 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/Timeprobe.h: Add #include "ace/config-lite.h" to pick up the
          config settings needed to do the right thing.

Mon Apr 16 17:56:42 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/generate_compile_stats.sh:

          Fixed usage statement to match actual argument parsing.
          Assume gcc is on the PATH instead of hard-coding /usr/bin/gcc.

Mon Apr 16 17:18:32 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * docs/svn/config:
        * docs/svn/svn-prefs.reg:

          Added README as a text file for the purposes of SVN end-of-line
          handling and keyword subsitution.

Mon Apr 16 15:41:39 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * ace/config-sunos5.7.h:
        * ace/config-sunos5.8.h:

          Moved the setting of ACE_HAS_VFWPRINTF and
          ACE_SHM_OPEN_REQUIRES_ONE_SLASH to config-sunos5.7.h.  They are
          valid for this platform as well as SunOS 5.8.

Mon Apr 16 13:01:00 UTC 2007 Simon Massey  <sma@prismtech.com>

        * ace/config-win32-msvc-7.h:
        * ace/config-win32-msvc-8.h:
        * ace/README:

          Add the new #define ACE_HAS_HEADER_ALLOCATED_CLASS_STATIC_CONST_INT_STOREAGE
          to the known offending platforms (Microsoft VC7 and VC8).

Mon Apr 16 11:01:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Log_Msg_Test.cpp:
          Made this test working for VxWorks 6.x kernel mode

        * tests/Handle_Set_Test.cpp:
        * tests/Priority_Reactor_Test.cpp:
        * tests/Process_Strategy_Test.cpp:
        * tests/Test_Output.cpp:
          Removed support for psos

        * tests/Barrier_Test.cpp:
          Fixed typo in comment

Mon Apr 16 08:41:56 UTC 2007 Martin Corino  <mcorino@remedy.nl>

        * tests/run_test.lst:
        * bin/tao_orb_tests.lst:

          (Temporary) exclusion of some tests which tend to cause too